# ldf2root

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  config.txt  ldf2root.cpp  testCase.txt
.cache/clangd/index/: DDASBitMasks.h.04A873055B7FFE45.idx  DDASEvent_legacy.cpp.C4D0FEBD6BF01CC7.idx  DDASEvent_legacy.h.8C8EFA02E21A88DB.idx  DDASHit.cpp.ECB0A9BF9ACCE8C7.idx  DDASHit.h.C619769F90D57110.idx  DDASHitUnpacker.cpp.43D4303F50DBD4A5.idx  DDASHitUnpacker.h.CE4A78B78FA19BA7.idx  DDASRootEvent.cpp.1FBBC0E401029D31.idx  DDASRootEvent.h.CEBFEFDA3018E6B6.idx  DDASRootHit.h.BC41A4BB67711F84.idx  DataParser.cpp.F51A5BCD6627BDC4.idx  DataParser.h.F11D7F18BE2A3AA4.idx  InputParser.h.AE340BC3FE248739.idx  LDFPixieTranslator.cpp.9CE96016F53CA2F7.idx  LDFPixieTranslator.h.8D3964C8DBE28807.idx  Translator.cpp.34293BD794A2198F.idx  Translator.h.420472515B138C00.idx  ddaschannel_legacy.cpp.AB99BE78D6CDE44B.idx  ddaschannel_legacy.h.FF2237CDC756DACA.idx  ldf2root.cpp.8625833A55EB8723.idx
core/: CMakeLists.txt  Makefile
core/include/: DDASBitMasks.h  DDASEvent_legacy.h  DDASLegacyLinkDef.h  DDASLinkDef.h  DDASRootEvent.h  DDASRootHit.h  DataParser.h  InputParser.h  LDFPixieTranslator.h  Translator.h  ddaschannel_legacy.h
core/src/: DDASEvent_legacy.cpp  DDASHit.cpp  DDASHitUnpacker.cpp  DDASRootEvent.cpp  DataParser.cpp  LDFPixieTranslator.cpp  Translator.cpp  ddaschannel_legacy.cpp
modulefiles/: ldf2root
src/: DDASHit.cpp  DDASHit.h  DDASHitUnpacker.cpp  DDASHitUnpacker.h  DataParser.h  InputParser.h  LDFPixieTranslator.cpp  LDFPixieTranslator.h  Translator.cpp  Translator.h
